Fix dark mode table text color

--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,9 @@ td, th {
   padding: 0.5em;
   white-space: nowrap;
   background-color: white;
+  @media (prefers-color-scheme: dark) {
+    background-color: #333;
+  }
 
   border: solid black;
   border-width: 0 1px 1px 0;
@@ -91,7 +94,6 @@ tbody th {
 }
 
 .concentration-cell {
-  color: black;
 }
 
 .allergen-desc {
